<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_topheader"
            android:title="Navigation">
            <menu>
                <item
                    android:id="@+id/navigation_item_1"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/navigation_item_1" />
                <item
                    android:id="@+id/navigation_item_2"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/navigation_item_2" />
                <item
                    android:id="@+id/navigation_item_3"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/navigation_item_3" />
            </menu>
        </item>
        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/nav_sub_header">
            <menu>
                <item
                    android:id="@+id/navigation_sub_item_1"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="@string/nav_sub_item_1" />
                <item
                    android:id="@+id/navigation_sub_item_2"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="@string/nav_sub_item_2" />
            </menu>
        </item>
    </group>
</menu>